@@ -1,5 +1,8 @@
 2012-10-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* rpm/aprx.init, rpm/aprx.service, rpm/aprx.spec.in:
+	    RPM package packing files
+
 	* filter.c:
 	    Clean filter parser.
 
